--- a/Index.html
+++ b/Index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <html>
     <head>
-        <title>new world aeternum</title>
+        <title>Index</title>
         <link rel="stylesheet" href="new world.css"/>
         <link rel="stylesheet" href="new world2.css"/>
         <link rel="stylesheet" href="new world3.css"/>
